Fix some broken tests